@@ -793,6 +793,7 @@ is <A HREF="http://www.linuxvm.org/">http://www.linuxvm.org/</A>
 <li>Integrated 3270 (SYSG) Console
 <li>Configuration-Topology Facility
 <li>HFP-Unnormalized-Extensions Facility
+<li>High-Word Facility
 <li>Load/Store-on-Condition Facility
 <li>Distinct-Operands Facility
 <li>Population-Count Facility
@@ -807,7 +808,6 @@ is <A HREF="http://www.linuxvm.org/">http://www.linuxvm.org/</A>
 <li>Set-Program-Parameter Facility
 <li>CPU-Measurement Counter Facility
 <li>CPU-Measurement Sampling Facility
-<li>High-Word Facility
 <li>Interlocked-Access Facility
 <li>Floating-Point-Extension Facility
 <li>Message-Security-Assist Extension 3
